--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/projectStyles.css">
 </head>
 <body>
     <header>
@@ -22,25 +22,26 @@
                 </ul>
             </nav>
             <div class="headerText">
-                <h1>Hi, I'm Dip | CS Student</h1>
-                <h2 class="jointText">I love learning more ways to make computers do awesome stuff</h2>
-                <h2 class="jointText">I'm a Lifelong Learner and a stack overflow power user</h2>
-                <!-- <h2>Here are some projects i've been working on!</h2> -->
+                <h1>Projects</h1>
             </div>
         </div>
     </header>
     <div class="lowerBody">
-        <div class="showcase">
-            <h1>Skills</h1>
-            <ul>
-                <li>Python</li>
-                <li>Javascript</li>
-                <li>Java</li>
-                <li>C++</li>
-                <li>HTML5</li>
-                <li>CSS</li>
-            </ul>
+        <div class="projects">
+            <h2><a href="https://diprrai.github.io/floppa_site/">Floppa Landing Page</a></h2>
+            <p>My attempt at making a great looking landing page</p>
+            <h2><a href="https://diprrai.github.io/Etch-a-Sketch/">Etch-a-Sketch</a></h2>
+            <p>An interactive drawing tool made from scratch using HTML, CSS & Javascript</p>
+            <h2><a href="https://diprrai.github.io/Calculator/">Calculator</a></h2>
+            <p>A calculator in case you happened to misplace yours :)</p>
+            <p>I learned how to handle more complex inputs ranging from various number and commands</p>
+            <p>as well as error checking for edge cases</p>
+            <h2><a href="https://diprrai.github.io/rock-paper-scissors/">Rock Paper Scissors</a></h2>
+            <p>My first project using Javascript where i learned basic syntax</p>
         </div>
     </div>
+    
+
+
 </body>
 </html>
