Wrong Text used (Hotfix)
header text has been updated to "About me" from "Projects" in aboutme.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,13 +16,14 @@
         <div class="headerBlock">
             <nav>
                 <ul class="nav_links">
+                    <li class="headerListItem"><a href="index.html">Home</a></li>
                     <li class="spacer"></li>
                     <li class="headerListItem"><a href="aboutme.html">About me</a></li>
                     <li class="headerListItem"><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
             <div class="headerText">
-                <h1>Projects</h1>
+                <h1>About Me</h1>
             </div>
         </div>
     </header>
