--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
         <div class="headerBlock">
             <nav>
                 <ul class="nav_links">
+                    <li class="headerListItem"><a href="index.html">Home</a></li>
                     <li class="spacer"></li>
                     <li class="headerListItem"><a href="aboutme.html">About me</a></li>
                     <li class="headerListItem"><a href="projects.html">Projects</a></li>
