updated project descriptions

--- a/projects.html
+++ b/projects.html
@@ -29,10 +29,10 @@
     </header>
     <div class="lowerBody">
         <div class="projects">
+            <h2><a href="https://diprrai.github.io/Etch-a-Sketch/">Pathfinder</a></h2>
+            <p>An interactive pathfinding simulator made using HTML, CSS & Javascript</p>
             <h2><a href="https://diprrai.github.io/floppa_site/">Floppa Landing Page</a></h2>
             <p>My attempt at making a great looking landing page</p>
-            <h2><a href="https://diprrai.github.io/Etch-a-Sketch/">Etch-a-Sketch</a></h2>
-            <p>An interactive drawing tool made from scratch using HTML, CSS & Javascript</p>
             <h2><a href="https://diprrai.github.io/Calculator/">Calculator</a></h2>
             <p>A calculator in case you happened to misplace yours :)</p>
             <p>I learned how to handle more complex inputs ranging from various number and commands</p>
