reimported libraries and fixed path

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,26 +23,28 @@
                     <li class="headerListItem"><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <div class="headerText" id="displayer">
-                <!-- <h1>Hi, I'm Dip | CS Student</h1>
-                <h2 class="jointText">I love learning more ways to make computers do awesome stuff</h2>
-                <h2 class="jointText">I'm a Lifelong Learner and a stack overflow power user</h2>
-                <h2>Here are some projects i've been working on!</h2> -->
+            <div class="container">
+                <div id="displayer"></div>
+                <div class="headerText">
+                    <h1>Hi, I'm Dip | CS Student</h1>
+                    <h2 class="jointText">I love learning more ways to make computers do awesome stuff</h2>
+                    <h2 class="jointText">I'm a Lifelong Learner and a stack overflow power user</h2>
+                    <h2>Here are some projects I've been working on!</h2>
+                </div>
+                <div class="showcase">
+                    <h1>Skills</h1>
+                    <ul>
+                        <li>Python</li>
+                        <li>Javascript</li>
+                        <li>Java</li>
+                        <li>C++</li>
+                        <li>HTML5</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
             </div>
+            
         </div>
     </header>
-    <div class="lowerBody">
-        <div class="showcase">
-            <h1>Skills</h1>
-            <ul>
-                <li>Python</li>
-                <li>Javascript</li>
-                <li>Java</li>
-                <li>C++</li>
-                <li>HTML5</li>
-                <li>CSS</li>
-            </ul>
-        </div>
-    </div>
 </body>
 </html>
