--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./js/script.js"></script>
     <header>
         <div class="headerBlock" >
             <nav>
