--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
-    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./src/script.js"></script>
     <header>
         <div class="headerBlock" >
             <nav>
