--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/projectStyles.css">
+    <link rel="stylesheet" href="./src/projectStyles.css">
 </head>
 <body>
     <header>
