updated styling for other pages as well

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div id="displayer"></div>
                 <div class="headerText">
-                    <h1>Hi, I'm Dip | CS Student</h1>
+                    <h1 class="header-title">Hi, I'm Dip | CS Student</h1>
                     <h2 class="jointText">I love learning more ways to make computers do awesome stuff</h2>
                     <h2 class="jointText">I'm a Lifelong Learner and a stack overflow power user</h2>
                     <h2>Here are some projects I've been working on!</h2>
@@ -40,7 +40,11 @@
                         <li>C++</li>
                         <li>HTML5</li>
                         <li>CSS</li>
+                        <li>MySQL</li>
                     </ul>
+                </div>
+                <div class="threejs-note">
+                    <p>rendered live with three.js</p>
                 </div>
             </div>
             
