--- a/aboutme.html
+++ b/aboutme.html
@@ -22,21 +22,18 @@
                     <li class="headerListItem"><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
-            <div class="headerText">
-                <h1>About Me</h1>
-            </div>
         </div>
     </header>
     <div class="lowerBody">
         <div class="aboutMeBlock">
-            <h1>Who is Dip?</h1>
-            <p>Hi my name is Dip, born in Nepal 2003 where I spent my early years as a child in Kathmandu. My parents migrated with me to Australia in 2011 in search for a better future and I am now proud holder of my Australian citizenship. My journey into the realm of computer science started during my high school days when I stumbled upon a captivating careers expo. Little did I know that this encounter would ignite a lifelong passion within me.</p>
+            <h1>Who am i?</h1>
+            <p>Hi my name is Dip Rai, I was born in Nepal where I spent my early years as a child in Kathmandu. My parents migrated with me to Australia in 2011 in search for a better future. My journey into the realm of computer science started in high school days when I stumbled upon a captivating careers expo. Little did I know that this encounter would ignite a lifelong passion within me.</p>
             <div class="intPara">
                 <p class="intPara1">At that expo, I was exposed to the fascinating world of coding, and it was love at first byte. I began experimenting with various programming languages, using my limited knowledge of coding to create visuals like that of the iconic "Matrix" series in a small command terminal. Although my program was very primitive utilising just a small while loop, randomise function and print statements the ability to bring ideas to life through code was exhilarating, and it opened a whole new world of possibilities to me.</p>
                 <img src="assets/matrix.gif" lass="intPara2">
             </div>
             
-            <p>As my coding ability grew, I found myself drawn to the thrill of competition. I began honing my skills by developing moderately fast web scraping bots, utilizing their power to participate in online game quizzes and win enticing prizes. The rush of combining my love for coding with my competitive nature was simply electrifying.</p>
+            <p>As my coding ability grew, I found myself drawn to the thrill of competition. I began honing my skills by developing moderately fast web scraping bots, utilizing their power to participate in online game quizzes. The rush of combining my love for coding with my competitive nature was simply electrifying.</p>
             <p>But my journey didn't stop there. I've always been driven by curiosity and a thirst for knowledge. The ever-evolving landscape of technology never fails to amaze me, and I eagerly embrace every opportunity to learn about new advancements. Artificial Intelligence quickly became a fascination, with its potential to revolutionize industries and reshape the way we live and work.</p>
             <p>Despite the challenges and complexities that come with technological advancements, I remain steadfastly optimistic. I believe that technology holds the key to solving some of the world's most pressing problems and improving lives on a global scale. I yearn to be an active participant in these transformative developments, leveraging my skills and passion for computer science to contribute to a better future.</p>
             <p>In my journey thus far, I've come to realize that coding isn't just a means to an end-it's an ever-evolving art form that allows me to push boundaries, unleash my creativity, and make a tangible impact. With each line of code, I continue to explore, learn, and grow, excitedly anticipating what the future holds for technology and the endless possibilities it brings.</p>
