--- a/index.html
+++ b/index.html
@@ -1,54 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="./src/styles.css">
 </head>
+
 <body>
     <script type="module" src="./src/script.js"></script>
     <header>
-        <div class="headerBlock" >
+        <div class="headerBlock">
             <nav>
-                <ul class="nav_links">
-                    <li class="headerListItem"><a href="index.html">Home</a></li>
-                    <li class="spacer"></li>
-                    <li class="headerListItem"><a href="aboutme.html">About me</a></li>
-                    <li class="headerListItem"><a href="projects.html">Projects</a></li>
-                </ul>
             </nav>
             <div class="container">
                 <div id="displayer"></div>
                 <div class="headerText">
-                    <h1 class="header-title">Hi, I'm Dip | CS Student</h1>
+                    <h1 class="header-title">Hi, I'm Dip</h1>
                     <h2 class="jointText">I love learning more ways to make computers do awesome stuff</h2>
                     <h2 class="jointText">I'm a Lifelong Learner and a stack overflow power user</h2>
-                    <h2>Here are some projects I've been working on!</h2>
-                </div>
-                <div class="showcase">
-                    <h1>Skills</h1>
-                    <ul>
-                        <li>Python</li>
-                        <li>Javascript</li>
-                        <li>Java</li>
-                        <li>C++</li>
-                        <li>HTML5</li>
-                        <li>CSS</li>
-                        <li>MySQL</li>
-                    </ul>
+                    <h2>Here are some <a class="redirect" href="https://github.com/DipRRai">projects</a> I've been
+                        working on!</h2>
                 </div>
                 <div class="threejs-note">
                     <p>rendered live with three.js</p>
                 </div>
             </div>
-            
+        </div>
         </div>
     </header>
+    <div class="showcase">
+        <h1 class="showcase-title">Languages, Tools, and Libraries</h1>
+        <hr>
+        <div class="skills-list">
+            <!-- HTML -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" />
+            <!-- CSS -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" />
+            <!-- JS -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" />
+            <!-- NODEJS -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-plain-wordmark.svg" />
+            <!-- NPM -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/npm/npm-original-wordmark.svg" />
+            <!-- GIT -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-plain-wordmark.svg" />
+            <!-- PHP -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg" />
+            <!-- REACT -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original-wordmark.svg" />
+            <!-- PYTHON -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg" />
+            <!-- MYSQL -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original-wordmark.svg" />
+            <!-- BOOTSTRAP -->
+            <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original-wordmark.svg" />
+            <!-- MONGODB -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-plain-wordmark.svg" />
+            <!-- JAVA -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-plain-wordmark.svg" />
+            <!-- NUMPY -->
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/numpy/numpy-plain-wordmark.svg" />
+
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/scikitlearn/scikitlearn-original.svg" />
+
+            <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/anaconda/anaconda-original-wordmark.svg" />
+
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pandas/pandas-original.svg" />
+
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/p5js/p5js-original.svg" />
+
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postman/postman-original.svg" />
+
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pytorch/pytorch-plain-wordmark.svg" />
+
+        </div>
+    </div>
 </body>
+
 </html>
