added contact section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                 <div id="displayer"></div>
                 <div class="headerText">
                     <h1 class="header-title">Hi, I'm Dip</h1>
-                    <h2 class="jointText">I love learning more ways to make computers do awesome stuff</h2>
-                    <h2 class="jointText">I'm a Lifelong Learner and a stack overflow power user</h2>
-                    <h2>Here are some <a class="redirect" href="https://github.com/DipRRai">projects</a> I've been
+                    <h2 class="joint-text">I love making computers do awesome stuff</h2>
+                    <h2 class="joint-text">I'm a Lifelong Learner and a stack overflow power user</h2>
+                    <h2 class="joint-redirect">Here are some <a class="redirect"
+                            href="https://github.com/DipRRai">projects</a> I've been
                         working on!</h2>
                 </div>
                 <div class="threejs-note">
@@ -36,7 +37,12 @@
         </div>
         </div>
     </header>
+
     <div class="showcase">
+        <img src="assets/unilogo.png" style="width: 200px; height: 200px;">
+        <h2>University of Melbourne</h2><br>
+        <h3>2021-Current</h3><br>
+        <h3 style="margin-bottom: 1%;">Bachelor of Science, Software Systems</h3><br>
         <h1 class="showcase-title">Languages, Tools, and Libraries</h1>
         <hr>
         <div class="skills-list">
@@ -84,6 +90,16 @@
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pytorch/pytorch-plain-wordmark.svg" />
 
         </div>
+        <footer>
+            <div class="footerBlock">
+                <h3>Contact me:</h3>
+                <h3>Melbourne, Australia</h3>
+                <h3>📱 0481867596</h3>
+                <h3>diprajrai@hotmail.com</h3>
+                <h4>hotmail is still cool right? 😎👍</h4>
+                <p>&copy; <span id="currentYear"></span> Dip Raj Rai.</p>
+            </div>
+        </footer>
     </div>
 </body>
 
